feat: initialize backend with Express and Puppeteer for Amazon scraping
- Added package.json for backend with necessary dependencies and scripts.
- Created app.js to set up Express server and define routes.
- Implemented Amazon scraping route in amazon.js with URL validation.
- Developed AmazonScraper service to extract product data using Puppeteer.
- Updated frontend store to fetch product data from the backend instead of using mock data.
- Configured Vite to proxy API requests to the backend server.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npm run dev:backend & vite",
+    "dev:frontend": "vite",
+    "dev:backend": "cd backend && npm run dev",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "test:e2e": "cypress run",
