--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@capacitor/cli": "7.4.3",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/devtools": "^8.0.2",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.3.0",
     "concurrently": "^9.2.1",
@@ -42,6 +43,7 @@
     "terser": "^5.4.0",
     "typescript": "~5.6.2",
     "vite": "~5.2.0",
+    "vite-plugin-vue-devtools": "^7.7.7",
     "vitest": "^0.34.6",
     "vue-tsc": "^2.1.10"
   },
